--- a/mainapp/static/mainapp/legacy/css/audioSmall.css
+++ b/mainapp/static/mainapp/legacy/css/audioSmall.css
@@ -24,7 +24,7 @@
     background-color: rgba(235, 235, 235, 0.95);
 }
 
-#playButton {
+.play-button {
 	width: 30px;
 	height: 30px;
     left: 30px;
@@ -34,13 +34,13 @@
     top: 0;
     bottom: 0;
 }
-#playButton:hover {
+.play-button:hover {
     left: 29px;
 	width: 32px;
 	height: 32px;
 }
 
-#mainLogo {
+.main-logo {
     width: 56px;
 	height: 56px;
 	/*box-shadow: 0px 4px 28px black/*#64bdf5;;*/
@@ -53,7 +53,7 @@
     margin: auto;
 }
 
-#mainLogo:hover {
+.main-logo:hover {
     right: 209px;
 	width: 58px;
 	height: 58px;
@@ -80,7 +80,7 @@
     display: none;
 }
 
-#nextlogo {
+.next-logo {
 	display: none;
 }
 
@@ -92,7 +92,7 @@
     display: none;
 }
 
-#prevlogo {
+.prev-logo {
 	top: -50%;
     left: 0;
 	opacity: 0.3;
@@ -101,7 +101,7 @@
     visibility: hidden;
 }
 
-#nextButton {
+.next-button {
     width: 30px;
     height: 30px;
     left: 90px;
@@ -111,7 +111,7 @@
     top: 0;
     bottom: 0;
 }
-#nextButton:hover {
+.next-button:hover {
     left: 89px;
 	width: 32px;
 	height: 32px;
@@ -145,7 +145,7 @@
 }
 
 
-#menu {
+.menu {
     z-index: 5;
     width: 30px;
     height: 30px;
@@ -182,7 +182,7 @@
     0 0 40px rgba(0, 0, 0, .1) inset;
 }
 
-#volumeBackground {
+.volume-background {
     margin: auto;
 	position: absolute;
     height: 160px;
@@ -196,7 +196,7 @@
     0 0 40px rgba(0, 0, 0, .1) inset;
 }
 
-#speaker {
+.speaker {
     width: 30px;
     height: 30px;
     right: 90px;
@@ -208,19 +208,15 @@
     z-index: 25
 }
 
-#speaker:hover {
+.speaker:hover {
 	width: 32px;
 	height: 32px;
     bottom: 17px;
+    right: 89px;
 }
 
-#speakerPic {
-    width: 100%;
-    height: 100%;
-    padding: initial;
-}
 
-#volume {
+.volume {
     margin: auto;
 	position: absolute;
     height: 155px;
@@ -230,7 +226,7 @@
     bottom:75px;
 }
 
-#volumeControlZone {
+.volume-control-zone {
     margin: auto;
 	position: absolute;
     right: 75px;
@@ -295,7 +291,7 @@
 	position: absolute;
 }
 
-#dropdown {
+.dropdown-button {
     margin: auto;
 	position: absolute;
     width: 30px;
@@ -304,7 +300,7 @@
     top: 0;
     bottom: 0;
 }
-#dropdown:hover {
+.dropdown-button:hover {
     right: 29px;
 	width: 32px;
 	height: 32px;
