--- a/frontend/src/components/NewProfile/About/About.css
+++ b/frontend/src/components/NewProfile/About/About.css
@@ -108,5 +108,16 @@ span {
     color: rgb(95, 95, 95);
     font-size: 18px;
 }
-
-
+.settings
+{
+    color: black;
+    text-decoration: none
+}
+.controll-btn:hover
+{
+    background-color: rgb(255, 246, 230);
+}
+a
+{
+    text-decoration: none 
+}
